feature_collection_#25: Fixed associate and api
